--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "4001:4001"
     environment:
       - AUTH_PORT=4001
+    env_file:
+      - .env
 
   game-service:
     build:
@@ -15,6 +17,8 @@ services:
       - "4002:4002"
     environment:
       - GAME_PORT=4002
+    env_file:
+      - .env
 
   quiz-service:
     build:
@@ -23,3 +27,5 @@ services:
       - "4003:4003"
     environment:
       - QUIZ_PORT=4003
+    env_file:
+      - .env
