--- a/auth-service/keycloak/import/keycloak-realm-config.json
+++ b/auth-service/keycloak/import/keycloak-realm-config.json
@@ -20,8 +20,35 @@
         "pkce.code.challenge.method": "S256",
         "post.logout.redirect.uris": "+"
       }
+    },
+    {
+      "clientId": "ssr-client",
+      "enabled": true,
+      "publicClient": false,
+      "redirectUris": ["http://localhost:4000/*"],
+      "webOrigins": ["http://localhost:4000"],
+      "standardFlowEnabled": true,
+      "directAccessGrantsEnabled": true,
+      "serviceAccountsEnabled": true,
+      "protocol": "openid-connect",
+      "attributes": {
+        "post.logout.redirect.uris": "+",
+        "client_credentials.use_refresh_token": "true"
+      }
     }
   ],
+  "roles": {
+    "realm": [
+      {
+        "name": "admin",
+        "description": "Administrator role"
+      },
+      {
+        "name": "user",
+        "description": "User role"
+      }
+    ]
+  },
   "users": [
     {
       "username": "testuser",
@@ -30,6 +57,23 @@
       "firstName": "Test",
       "lastName": "User",
       "email": "testuser@example.com",
+      "realmRoles": ["user"],
+      "credentials": [
+        {
+          "type": "password",
+          "value": "123",
+          "temporary": false
+        }
+      ]
+    },
+    {
+      "username": "testadmin",
+      "enabled": true,
+      "emailVerified": true,
+      "firstName": "Test",
+      "lastName": "Admin",
+      "email": "testadmin@example.com",
+      "realmRoles": ["admin"],
       "credentials": [
         {
           "type": "password",
